src/test/ui/span/macro-ty-params.stderr
error: generic arguments in macro path
  --> $DIR/macro-ty-params.rs:10:10
   |
LL |     foo::<T>!();
   |          ^^^

error: generic arguments in macro path
  --> $DIR/macro-ty-params.rs:11:10
   |
LL |     foo::<>!();
   |          ^^

error: unexpected generic arguments in path
  --> $DIR/macro-ty-params.rs:12:15
   |
LL |     m!(Default<>);
   |               ^^

error: aborting due to 3 previous errors

